jlamontSC-test/src/objects/Interest__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Interests</relationshipLabel>
        <relationshipName>Interests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interest_Description__c</fullName>
        <label>Interest Description</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Interest_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>accessibility</fullName>
                </value>
                <value>
                    <fullName>Admin/Operations</fullName>
                </value>
                <value>
                    <fullName>agriculture</fullName>
                </value>
                <value>
                    <fullName>air</fullName>
                </value>
                <value>
                    <fullName>alaska</fullName>
                </value>
                <value>
                    <fullName>alberta clipper pipeline</fullName>
                </value>
                <value>
                    <fullName>ALEC</fullName>
                </value>
                <value>
                    <fullName>animal rights</fullName>
                </value>
                <value>
                    <fullName>Appalachia</fullName>
                </value>
                <value>
                    <fullName>arctic</fullName>
                </value>
                <value>
                    <fullName>art</fullName>
                </value>
                <value>
                    <fullName>asthma</fullName>
                </value>
                <value>
                    <fullName>babies</fullName>
                </value>
                <value>
                    <fullName>backpacking</fullName>
                </value>
                <value>
                    <fullName>bear</fullName>
                </value>
                <value>
                    <fullName>biking</fullName>
                </value>
                <value>
                    <fullName>biomass</fullName>
                </value>
                <value>
                    <fullName>Bird Dogging</fullName>
                </value>
                <value>
                    <fullName>birds</fullName>
                </value>
                <value>
                    <fullName>bison</fullName>
                </value>
                <value>
                    <fullName>CAFO</fullName>
                </value>
                <value>
                    <fullName>Call to Target</fullName>
                </value>
                <value>
                    <fullName>campaign finance</fullName>
                </value>
                <value>
                    <fullName>camping</fullName>
                </value>
                <value>
                    <fullName>Canvassing</fullName>
                </value>
                <value>
                    <fullName>carbon pricing/tax</fullName>
                </value>
                <value>
                    <fullName>celebrity</fullName>
                </value>
                <value>
                    <fullName>chapters</fullName>
                </value>
                <value>
                    <fullName>children</fullName>
                </value>
                <value>
                    <fullName>clean energy</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interest_Type__c</fullName>
        <label>Interest Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Activity</fullName>
                </value>
                <value>
                    <fullName>Issue</fullName>
                </value>
                <value>
                    <fullName>Lifestyle</fullName>
                    <isActive>false</isActive>
                    <label>Lifestyle</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Interest</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Contact__c</columns>
        <columns>Interest_Type__c</columns>
        <columns>Interest_Description__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IA-{0}</displayFormat>
        <label>Interest Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>